--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,9 @@ dependencies:
 
 
   cupertino_icons: ^1.0.0
-  url_launcher: ^5.7.10
+  animated_splash: ^1.0.0
   image_picker: ^0.6.7+22
+  image_cropper: ^1.3.1
   firebase_ml_vision: ^0.10.0
   firebase_core: ^0.5.0
 
@@ -26,13 +27,9 @@ dev_dependencies:
 
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo.png
 
